# HalovaMake_S.P.A.D.D

./: AiPriradenieEtc.py  main.py  prompts.py  pyproject.toml  test.py
frontEnd/: index.html  index.js  style.css
login backend/: login.py
