[project]
name = "halovamake"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.135.2",
    "google-genai>=1.68.0",
    "google-generativeai>=0.8.6",
    "groq>=1.1.2",
    "python-dotenv>=1.2.2",
]
